<resources>
    <string name="app_name">点博客</string>
    <string name="blog_edit_title">编写博文</string>
    <string name="button_back">返回</string>
    <string name="button_send">发布</string>
    <string name="input_username">输入用户名</string>
    <string name="input_password">输入密码</string>
    <string name="button_change_to_test_span_activity_text">切换到Span测试</string>
    <string name="input_link">输入链接</string>
    <string name="button_cancel">取消</string>
    <string name="button_insert">插入</string>
    <string name="input_blog_content">输入博文内容</string>
    <string name="input_blog_title">输入博文标题</string>
    <string name="button_delete">删除</string>
    <string name="button_favorite">收藏</string>
    <string name="button_report">举报</string>
    <string name="blog_browser_title">博文详情</string>
    <string name="comment_browser_title">评论详情</string>
    <string name="comment_tips">博文评论</string>
    <string name="reply_tips">评论回复</string>
    <string name="input_comment">输入评论</string>
    <string name="input_reply">输入回复</string>
    <string name="button_reply">回复</string>
    <string name="notification_title">消息</string>
    <string name="category_title">分类</string>
    <string name="choose_category">选择分类</string>
    <string name="result_type_title">结果</string>
    <string name="button_close">关闭</string>
    <string name="button_comment">评论</string>
    <string name="report_tip_choose_report_reason">选择举报理由</string>
    <string name="report_tip_add_report_reason">补充举报理由（选填）</string>
    <string name="report_title">举报</string>
    <string name="contain_ads">含有广告</string>
    <string name="contain_offensive_language">辱骂攻击</string>
    <string name="contain_r18">低俗色情</string>
    <string name="content_useless">内容无意义</string>
</resources>
