<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestOkHttpActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="@dimen/toolbar_button_width"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_click"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:contentDescription="@string/button_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/blog_edit_title" />

            <ImageButton
                android:id="@+id/button_send"
                android:layout_width="@dimen/toolbar_button_width"
                android:layout_height="match_parent"
                android:background="@drawable/button_click"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_send_white_24dp"
                android:contentDescription="@string/button_send" />

        </RelativeLayout>
    </Toolbar>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:inputType="text"
        android:hint="@string/input_username"
        android:maxLength="15" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_input"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:maxLength="20" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result"/>

            <ImageButton
                android:id="@+id/upload_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view"
                android:background="@drawable/button_click"
                android:src="@drawable/ic_insert_photo_white_24dp"/>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_change_to_test_span_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:background="@drawable/button_click"
        android:text="@string/button_change_to_test_span_activity_text"/>

</RelativeLayout>