<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/report_toolbar_button_close"
                android:layout_width="@dimen/toolbar_button_width"
                android:layout_height="match_parent"
                android:background="@drawable/button_click"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_close_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/report_title" />

            <ImageButton
                android:id="@+id/report_toolbar_button_send"
                android:layout_width="@dimen/toolbar_button_width"
                android:layout_height="match_parent"
                android:background="@drawable/button_click"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_send_white_24dp" />

        </RelativeLayout>
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/report_preview_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_text_size"
                android:layout_margin="@dimen/normal_margin"/>

            <TextView
                android:id="@+id/report_preview_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_preview_1"
                android:textSize="@dimen/content_text_size"
                android:layout_margin="@dimen/normal_margin"/>

            <RadioGroup
                android:id="@+id/report_reason_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_preview_2"
                android:layout_margin="@dimen/normal_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/report_contain_ads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/contain_ads" />

                <RadioButton
                    android:id="@+id/report_contain_r18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/contain_r18" />

                <RadioButton
                    android:id="@+id/report_content_useless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/content_useless" />

                <RadioButton
                    android:id="@+id/report_contain_offensive_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/contain_offensive_language" />
            </RadioGroup>

            <TextView
                android:id="@+id/report_add_report_reason_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_reason_group"
                android:text="@string/report_tip_add_report_reason"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>

            <EditText
                android:id="@+id/report_add_report_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_add_report_reason_tip"
                android:gravity="start"
                android:minHeight="@dimen/report_reason_input_min_height"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>